Log gc stat to the file